@@ -17,6 +17,7 @@ Version dev-4.2 (expected 15/03/2012)
     * itwp.operaarte add tMateriale
     * itwp.operaarte add tTecnica
     * itwp.operaarte add tAltezza
+    * Create the base for a rolling devel
 
 Version 4.1.1 (08/03/2012)
     * Make c and p available for all classes
